--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/montserrat": "^0.2.2",
-    "expo": "^44.0.0",
+    "expo": "^44.0.6",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6",
-    "expo-splash-screen": "~0.14.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "^0.66.16"
   },
   "private": true
 }
